syntax = "proto3";

package auth;

service UserService {
	rpc CreateUser (CreateUserDto) returns (User) {}
	rpc FindAllUsers (Empty) returns (Users) {}
	rpc FindOneUser (FindOneUserDto) returns (User) {}
	rpc UpdateUser (UpdateUserDto) returns (User) {}
	rpc RemoveUser (RemoveUserDto) returns (User) {}
}

message Empty {};

message User {
	string id = 1;
	string username = 2;
	string email = 3;
	string password = 4;
}

message Users {
	repeated User users = 1;
}

message CreateUserDto {
	string username = 1;
	string email = 2;
	string password = 3;
}

message FindOneUserDto {
	string id = 1;
}

message UpdateUserDto {
	string id = 1;
	optional string username = 2;
	optional string email = 3;
	optional string password = 4;
}

message RemoveUserDto {
	string id = 1;
}